Added a note for Userena to TODO list.

--- a/TODO.textile
+++ b/TODO.textile
@@ -5,3 +5,6 @@ Thing to think about in case my brain forgets.
 * Open auth integration, see:
 ** https://developers.google.com/accounts/docs/OpenID
 ** http://pypi.python.org/pypi/python-openid/
+
+* Implement user registration, or use an existing package such as:
+** http://www.django-userena.org/
